 * Fix: SASS compilation errors during Wagtail development no longer cause exit of Gulp process, instead throws error to console and continues (Thomas Winter)
 * Fix: Explorer page listing now uses specific page models, so that custom URL schemes defined on Page subclasses are respected
 * Fix: Made settings menu clickable again in Firefox 46.0a2 (Juha Kujala)

1.3.1 (05.01.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Applied workaround for failing wagtailimages migration on Django 1.8.8 / 1.9.1 with Postgres (see <https://code.djangoproject.com/ticket/26034>)

1.3 (23.12.2015)
~~~~~~~~~~~~~~~~

 * Django 1.9 support
 * Support for indexing fields across relations in Elasticsearch
 * Added toolbar to cross-link between different search areas, and `register_admin_search_area` hook to register new areas (Ben Kerle)
 * Added `WagtailPageTests`, a helper module to simplify writing tests for Wagtail sites
 * Added system checks to check the `subpage_types` and `parent_page_types` attributes of page models
 * Added `WAGTAIL_PASSWORD_RESET_ENABLED` setting to allow password resets to be disabled independently of the password management interface (John Draper)
 * Submit for moderation notification emails now include the editor name (Denis Voskvitsov)
 * Updated fonts for more comprehensive Unicode support
 * Added `.alt` attribute to image renditions
 * The default `src`, `width`, `height` and `alt` attributes can now be overridden by attributes passed to the `{% image %}` tag
 * Added keyboard shortcuts for preview and save in the page editor
 * Added `Page` methods `can_exist_under`, `can_create_at`, `can_move_to` for customising page type business rules
 * `wagtailadmin.utils.send_mail` now passes extra keyword arguments to Django's `send_mail` function (Matthew Downey)
 * `page_unpublish` signal is now fired for each page that was unpublished by a call to `PageQuerySet.unpublish()`