@@ -47,6 +47,8 @@ Changelog
  * Fix: SASS compilation errors during Wagtail development no longer cause exit of Gulp process, instead throws error to console and continues (Thomas Winter)
  * Fix: Explorer page listing now uses specific page models, so that custom URL schemes defined on Page subclasses are respected
  * Fix: Made settings menu clickable again in Firefox 46.0a2 (Juha Kujala)
+ * Fix: User management index view no longer assumes the presence of `username`, `first_name`, `last_name` and `email` fields on the user model (Eirik Krogstad)
+
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
